typescript/checker/tests/conformance/es6/templates/templateStringUnterminated4.ts.stderr
error: Unterminated template
 --> $DIR/tests/conformance/es6/templates/templateStringUnterminated4.ts:2:1
  |
2 | `\\\`
  | ^^^^^

